# longhouse

./: .bumpversion.toml  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  E2E_HANDOFF.md  EDITIONS.md  FOUND.md  IDEAS.md  LEARNINGS-REVIEW-2026-01-30.md  Makefile  NOTICE  PHASE_2_READY.md  PRELUNCH-CLEANUP.md  PROGRESS.md  QA_PLAN.md  README.md  RELEASE.md  TODO.md  TRACCAR_QUICKSTART.md  TRADEMARKS.md  VISION.md  banana  developerID_application.cer  package.json
apps/control-plane/: API.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/control-plane/control_plane/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
apps/control-plane/e2e/: conftest.py  test_credential_gates.py  test_login_flow.py  test_signup_flow.py
apps/control-plane/longhouse_shared/: __init__.py  redirects.py
apps/control-plane/tests/: test_deployer.py  test_provisioning_flow.py
apps/engine/: Cargo.toml
apps/engine/src/: bench.rs  config.rs  daemon.rs  discovery.rs  heartbeat.rs  main.rs  outbox.rs  shipper.rs  watcher.rs
apps/engine/tests/: golden_parser_contract.rs
apps/sauron/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.docker.toml  pyproject.toml
apps/sauron/sauron/: __init__.py  api.py  cli.py  config.py  job_definitions.py  main.py
apps/sauron/tests/: __init__.py  test_api_sync.py  test_sync.py
apps/zerg/backend/: .dockerignore  DATABASE.md  README.md  TESTING_STRATEGY.md  pyproject.toml  pytest.ini  run_backend_tests.sh  run_backend_tests_lite.sh  start-dev.sh  start.sh  test_main.py  vulture-whitelist.py
engine/: Cargo.toml  build.rs
engine/src/: bench.rs  build_identity.rs  claude_channel_control.rs  claude_channel_launch.rs  claude_channel_server.rs  claude_lifecycle_hook.rs  claude_permission_gate.rs  claude_print.rs  cli_turn.rs  codex_app_server_canary.rs  codex_attachments.rs  codex_bridge.rs  codex_exec.rs  codex_source.rs  codex_teardown.rs  codex_ws_relay.rs  config.rs  console_prompt.rs  control_channel.rs  cursor_acp.rs  cursor_exec.rs  cursor_helm_control.rs  cursor_launch_binding.rs  cursor_print.rs  cursor_store.rs  cursor_visibility.rs  daemon.rs  device.rs  discovery.rs  error_tracker.rs  flight.rs  heartbeat.rs  longhouse.rs  machine_presence.rs  main.rs  managed_antigravity_scan.rs  managed_bridge_scan.rs  managed_claude_scan.rs  managed_contract_janitor.rs  managed_cursor_helm_scan.rs  (+24 more)
engine/src/commands/: cmd_bench.rs  cmd_parse.rs  cmd_ship.rs  mod.rs
engine/src/pipeline/: batcher.rs  compressor.rs  parser.rs
engine/src/shipper/: mod.rs  types.rs
engine/src/shipping/: client.rs  mod.rs  storage_v2.rs
engine/src/state/: cursor_store_records.rs  cursor_store_root.rs  db.rs  db_pool.rs  file_identity.rs  file_state.rs  live_file_state.rs  managed_session_state.rs  mod.rs  pending_source_envelope.rs  session_binding.rs  session_phase.rs  session_title.rs  source_epoch.rs  source_inventory.rs  spool.rs  unmanaged_process_binding.rs
engine/tests/: adversarial_parser.rs  coordination_mcp_handshake.rs  golden_parser_contract.rs  managed_teardown.rs
server/: .dockerignore  README.md  hatch_build.py  pyproject.toml  ruff.toml  run_backend_tests_lite.sh  sitecustomize.py  start-dev.sh  vulture-whitelist.py
server/alembic/: env.py
server/apscheduler/: __init__.py
server/evals/: asserters.py  conftest.py  results_store.py  runner.py  test_eval_runner.py
server/evals/datasets/: live.yml  tool_selection.yml
server/scripts/: analyze_llm_requests.py  build_demo_db.py  debug_resume_llm_input.py  debug_supervisor_spawn.py  debug_tool_events.py  debug_trace.py  eval_prompts.py  export_openapi.py  init_db.py  personal_credentials.example.json  replay_run.py  run_oikos_autonomy_journeys.py  runners.example.json  seed_personal_credentials.py  seed_scenario.py  test_lazy_loading.py  test_lazy_rebind.py  test_llm_decider.py  validate-runtime.py
server/tests/integration/: test_shipper_e2e.py
server/tests_lite/: _capability_test_helper.py  _kernel_test_helpers.py  test_acquisition_telemetry.py  test_admin_reset_database.py  test_agents_backfill_embeddings.py  test_agents_control.py  test_agents_cursor_role_backfill.py  test_agents_duplicate_sqlite.py  test_agents_events_filter_sqlite.py  test_agents_ingest_chunk_sizing.py  test_agents_ingest_cooperative.py  test_agents_ingest_decompression_cap.py  test_agents_ingest_live_preview.py  test_agents_ingest_sqlite.py  test_agents_ingest_trace.py  test_agents_machine_health.py  test_agents_media.py  test_agents_media_backfill.py  test_agents_models_sqlite.py  test_agents_provider_action_coverage.py  test_agents_search_fts_sqlite.py  test_agents_sessions_stream.py  test_agents_slow_turns.py  test_agents_source_lines.py  test_agents_storage_v2.py  test_agents_storage_v2_session_reads.py  test_anchor_title_close_promotion.py  test_antigravity_cli.py  test_apns_notifications.py  test_archive_api_reader_status.py  test_archive_backlog.py  test_archive_derived_projector.py  test_archive_events_verifier.py  test_archive_export_cli.py  test_archive_hot_projector.py  test_archive_manifest_models.py  test_archive_only_projection.py  test_archive_primary.py  test_archive_raw_exporter.py  test_archive_read_proxy.py  (+450 more)
server/tests_lite/fixtures/: codex_bridge_runtime_events.json  codex_console_runtime_events.json  oikos_autonomy_journeys.yml
server/tests_lite/runtime_display_snapshots/: 01-managed-control-bridge-detached.json  (+4 more)
server/zerg/: bootstrap_sqlite.py  build_info.py  constants.py  context.py  data_plane.py  database.py  db_migrations.py  db_utils.py  lifespan.py  logging_config.py  machine_evidence.py  main.py  managed_phase_contract.py  managed_provider_contract_manifest.py  metrics.py  models_config.py  observability.py  openapi_schema.py  pricing.py  provider_cli_contract.py  provider_live_proof.py  provider_live_route_e2e.py  provider_orchestration_capabilities.py  provider_release_status.py  request_urls.py  session_execution_home.py  session_loop_mode.py
(+4400 files in other folders)
