[package]
name = "longhouse-engine"
version = "0.1.25"
edition = "2021"
description = "Longhouse session shipper — high-performance Rust engine"
license = "Apache-2.0"

[[bin]]
name = "longhouse-engine"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }

# Compression (zlib-rs backend is fastest per flate2 docs; default miniz_oxide is pure Rust but slower)
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
zstd = "0.13"

# HTTP
reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "signal", "sync", "time", "process", "macros"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots", "rustls-tls-webpki-roots"] }
futures-util = "0.3"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Parallelism
rayon = "1"
crossbeam-channel = "0.5"

# Filesystem watching
notify = "7"

# Memory-mapped I/O
memmap2 = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.32.1"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.1", features = ["trace", "http-proto", "reqwest-client", "reqwest-rustls"] }

# Random (jitter for 429 backoff)
rand = "0.8"

# System calls (disk free bytes)
libc = "0.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "v5"] }

# Hashing (attachment sha256 verify)
sha2 = "0.10"

# Signal handling
signal-hook = "0.3"

# Error handling
anyhow = "1"
thiserror = "2"

# File traversal
walkdir = "2"

# CPU detection
num_cpus = "1"

# Process-lifetime file locking (bridge state file liveness)
fd-lock = "4"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
temp-env = "0.3.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.ci]
inherits = "release"
lto = false
codegen-units = 8
